# wlrip

./: .gitignore  Cargo.toml  flake.nix  os-setup.md  readme.md  run.sh  setup.sh
.github/workflows/: rust.yml
.hooks/: pre-commit
nix/: shell.nix
src/: data.rs  game.rs  lagdbg.rs  main.rs  math.rs  message.rs
src/config/: aim.rs  application.rs  hud.rs  mod.rs  player.rs  unsafe.rs
src/cs2/: find_offsets.rs  input.rs  key_codes.rs  mod.rs  penetration.rs  target.rs
src/cs2/entity/: mod.rs  player.rs
src/cs2/features/: aimbot.rs  esp_toggle.rs  mod.rs  rcs.rs  shot_log.rs  triggerbot.rs
src/os/: mouse.rs  process.rs
src/parser/: bvh.rs
src/ui/: app.rs  mod.rs  wayland_overlay.rs  window_context.rs
src/ui/gui/: about.rs  aimbot.rs  application.rs  config.rs  grenade.rs  helpers.rs  hud.rs  mod.rs  player.rs  unsafe.rs
src/ui/overlay/: entity.rs  hud.rs  mod.rs  player.rs
