[package]
name = "wlrip"
version = "1.0.0"
edition = "2024"

[dependencies]
utils = { git = "https://codeberg.org/avitrano/utils" }
bytemuck = "1.24"
bincode = "1.3"
egui = "0.34"
egui_glow = { version = "0.34", features = ["winit"] }
egui-winit = { version = "0.34", default-features = false, features = ["wayland"] }
epaint = { version = "0.34", features = ["serde"] }
glam = { version = "0.33", features = ["bytemuck", "serde"] }
glutin = { version = "0.32", default-features = false, features = [
    "wayland",
    "egl",
] }
glutin-winit = { version = "0.5", default-features = false, features = [
    "wayland",
    "egl",
] }
nix = { version = "0.31", features = ["ioctl"] }
rand = "0.10"
rand_distr = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.28", features = ["derive"] }
toml = "1.0"
uuid = { version = "1.18", features = ["v4", "serde"] }
winit = { version = "0.30", default-features = false, features = ["wayland", "wayland-csd-adwaita"] }
smithay-client-toolkit = "0.20.0"
wayland-client = "0.31.14"
wayland-egl = "0.32.11"
khronos-egl = { version = "6.0.0", features = ["dynamic"] }

[profile.dev]
overflow-checks = false

[profile.release]
debug = true
lto = true

[features]
read-only = []
